syntax = "proto3";

package CIM.Grpc;
option go_package=".;cim";
option optimize_for = LITE_RUNTIME;

import "CIM.Def.proto";

message Empty{}

message Hello {
    string ip = 1;
    int32 port = 2;
}

// 创建用户账户授权信息
message CreateUserAccountInfoReq {
    string user_name = 1;       // 用户名
    string user_pwd = 2;        // 用户密码
    string user_nick_name = 3;  // 用户昵称
}

message CreateUserAccountInfoRsp {
    CIM.Def.CIMErrorCode error_code = 1;         // 结果
}

// 查询用户昵称
message QueryUserNickNameReq {
    uint64 user_id = 1;          // 用户ID
}

message QueryUserNickNameRsp {
    CIM.Def.CIMErrorCode error_code = 1;         // 结果
    string nick_name = 2; // 昵称
}

// 昵称随机生成
message GenerateNickNameReq{
    string version = 1; // 版本：目前只支持V1
}

message GenerateNickNameRsp{
    string version = 1; // 版本
    string last_name = 2; // 姓氏
    string first_name = 3; // 名字
}